<resources>
    <string name="app_name">FreeDom</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="action_settings">Settings</string>

    <string-array name="array_gender">
        <item>мужской</item>
        <item>женский</item>
    </string-array>

    <string name="btnSave">Сохранить</string>
    <string name="btnRecovery">Восстановить</string>
    <string name="txtProfile">Ваш профиль</string>
    <string name="ttlGender">Укажите свой пол</string>
    <string name="ttlCity">Укажите город</string>
    <string name="cancel">Отмена</string>
    <string name="cameraPhoto">Сделать снимок</string>
    <string name="galleryPhoto">Мои фото</string>
    <string name="titleGetPhoto">Укажите фото</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crash_toast_text">Ошибка отправлена разработчику</string>

</resources>
