<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.kido.freedom.ui.FragmentAccount">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/linearLayout4"
            android:nestedScrollingEnabled="false" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:id="@+id/linearLayout2"
            android:layout_above="@+id/linearLayout3">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Имя"
                    android:id="@+id/textView2"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/eName"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:hint="укажите имя" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Email"
                    android:id="@+id/textView3"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/eEmail"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:hint="укажите email" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Дата рождения"
                    android:id="@+id/textView4"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:id="@+id/eBirthday"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:hint="dd.mm.yyyy" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Телефон"
                    android:id="@+id/textView6"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"
                    android:id="@+id/ePhone"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:hint="укажите телефон" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Пол"
                    android:id="@+id/textView5"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />

                <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:id="@+id/spinnerGender"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:spinnerMode="dialog"
                    android:prompt="@string/ttlGender"
                    android:entries="@array/array_gender"
                    android:layout_marginRight="10dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Город"
                    android:id="@+id/textView"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />

                <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:id="@+id/spinnerCity"
                    android:spinnerMode="dialog"
                    android:dropDownWidth="fill_parent"
                    android:layout_marginLeft="10dp"
                    android:prompt="@string/ttlCity"
                    android:layout_marginRight="10dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout3">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSave"
                android:id="@+id/btnSave"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnRecovery"
                android:id="@+id/btnRecovery"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/txtProfile"
                android:id="@+id/txtProfile"
                android:layout_marginLeft="15dp" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>
